# rusty-accounts

./: .dockerignore  Cargo.toml  Dockerfile  README.md  docker-compose.yaml  justfile  release.toml
.github/workflows/: ci.yaml
config/: default.yaml
migrations/: 001_initial.sql
src/: api.rs  infra.rs  main.rs  util.rs
src/api/: mod.rs  v0.rs
src/domain/: account.rs  account_entity.rs  account_repository.rs  mod.rs
src/infra/: pg_account_event_handler.rs  pg_account_evt_handler.rs  pg_account_repository.rs
